# OpenGL-Application

./: .gitignore  CMakeLists.txt
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/gradle/wrapper/: gradle-wrapper.properties
configs/: models.json
headers/: Application.hpp  Buffer.hpp  Camera.hpp  Cube.hpp  Framebuffer.hpp  GLTFLoader.hpp  IApplication.hpp  ISceneObject.hpp  Image.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  PotentialApp.hpp  RenderResource.hpp  ResourceManager.hpp  Sampler.hpp  SceneManager.hpp  SceneNode.hpp  SceneObject.hpp  Shader.hpp  Texture.hpp
headers/app/: IApplication.hpp  PotentialApp.hpp
headers/managers/: FileManager.hpp  JSONImporter.hpp  ResourceManager.hpp  SceneManager.hpp
headers/renderResources/: Framebuffer.hpp  Image.hpp  Material.hpp  RenderResource.hpp  Sampler.hpp  Shader.hpp  Texture.hpp
headers/scene/: Camera.hpp  Cube.hpp  ISceneObject.hpp  Light.hpp  Mesh.hpp  Model.hpp  SceneNode.hpp
headers/utils/: Logger.hpp
models/cube/: cube.gltf
shaders/: Constants.h  Cubemap.frag  Cubemap.vert  DefaultCubemap.vert  DefaultEnv.frag  DefaultEnv.vert  FullscreenQuad.frag  GLSLversion.h  GLSLversion.h.in  InOutModel.h  Model.frag  Model.vert  PbrFunctions.h  PreviewScreen.frag  RenderText.vert  Skybox.frag  Skybox.vert  TextureSampling.h  Triangle.frag  Triangle.vert
shaders/IBL/: BRDF_LUT.frag  BRDF_LUT.vert  IrradianceMap.frag  PrefilterHDRMap.frag
shaders/PostProcess/: Bloom.frag  BloomFinal.frag  FullscreenQuad.frag  FullscreenQuad.vert  GaussianBlur.frag  RenderText.frag  RenderText.vert
shaders/SDF/: SDFCommon.h  SDFOperations.h  SDFScene.frag  SDFShapes.h  SDFTextRendering.frag  SDFUtils.h
src/: App.cpp  Application.cpp  CMakeLists.txt  Camera.cpp  Cube.cpp  Framebuffer.cpp  GLTFLoader.cpp  IApplication.cpp  ISceneObject.cpp  Image.cpp  JSONImporter.cpp  Material.cpp  Mesh.cpp  Model.cpp  PotentialApp.cpp  ResourceManager.cpp  Sampler.cpp  SceneManager.cpp  SceneNode.cpp  SceneObject.cpp  Shader.cpp  Texture.cpp
src/app/: App.cpp  CMakeLists.txt  IApplication.cpp  PotentialApp.cpp
src/managers/: CMakeLists.txt  FileManager.cpp  GLTFLoader.cpp  ResourceManager.cpp  SceneManager.cpp
src/renderResources/: CMakeLists.txt  Framebuffer.cpp  Material.cpp  Sampler.cpp  Shader.cpp
src/scene/: CMakeLists.txt  Camera.cpp  Cube.cpp  ISceneObject.cpp  Mesh.cpp  Model.cpp  SceneNode.cpp
src/utils/: CMakeLists.txt  Logger.cpp
textures/chars/SDF/4096/: 100.hdr  101.hdr  102.hdr  103.hdr  104.hdr  105.hdr  106.hdr  107.hdr  108.hdr  109.hdr  110.hdr  111.hdr  112.hdr  113.hdr  114.hdr  115.hdr  116.hdr  117.hdr  118.hdr  119.hdr  120.hdr  121.hdr  122.hdr  123.hdr  124.hdr  125.hdr  126.hdr  32.hdr  33.hdr  34.hdr  35.hdr  36.hdr  37.hdr  38.hdr  39.hdr  40.hdr  41.hdr  42.hdr  43.hdr  44.hdr  (+55 more)
